# Tetris

./: .gitignore  CMakeLists.txt  README.md  config.ini
include/core/: app.h  event_bus.h  state.h  time.h
include/gameplay/: board.h  gameplay.h  piece.h  randomizer.h  scoring.h  srs.h
include/input/: input.h
include/render/: font5x7.h  renderer.h
include/ui/: fx.h  hud.h  state_controls.h  state_credits.h  state_gameover.h  state_menu.h  state_options.h  state_pause.h  state_play.h
include/utils/: config.h  log.h  str.h
src/: main.c
src/core/: app.c  event_bus.c  state.c  time.c
src/gameplay/: board.c  gameplay.c  piece.c  randomizer.c  scoring.c  srs.c
src/input/: input.c
src/render/: font5x7.c  renderer.c
src/ui/: fx.c  hud.c  state_controls.c  state_credits.c  state_gameover.c  state_menu.c  state_options.c  state_pause.c  state_play.c
src/utils/: config.c  log.c  str.c
tests/: test_board.c  test_main.c  test_randomizer.c  test_scoring.c  test_srs.c
